# DSDesk

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  com.dekomote.dsdesk.flathub.yml  com.dekomote.dsdesk.yml
cmake/: mingw64-toolchain.cmake
resources/: Info.plist.in  app.manifest  app.rc  codesign_bundle.cmake  com.dekomote.dsdesk.desktop  com.dekomote.dsdesk.metainfo.xml.in  icon.icns  resources.qrc
scripts/: build-flatpak.sh  build-macos.sh  build-packages.sh  build-rpm.sh  build-windows.sh
src/: ipc.h  main.cpp
src/credentials/: KeychainManager.cpp  KeychainManager.h
src/qml/: AddDownloadDialog.qml  DownloadItemDelegate.qml  DownloadListView.qml  LoginView.qml  Main.qml  TaskDetailsSheet.qml
src/synology/: DownloadModel.cpp  DownloadModel.h  DownloadTask.h  SynologyClient.cpp  SynologyClient.h  SynologySettings.cpp  SynologySettings.h
